Adjust to force use of native libraries.